select the proplems

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <link rel="stylesheet" href="css/style.css" />
 
 
+<!-- Optional - Adds useful class to manipulate icon font display -->
+
+
+
 </head>
 
 <body>
@@ -128,7 +132,7 @@
                     </li>
                 </ul>
                 <div class="search">
-                    <span class="icon pe-7s-search cursor-pointer"></span>
+                    <span class="icon pe-7s-search cursor-pointer"></span> 
                     <div class="search-form text-center custom-font">
                         <form>
                             <input type="text" name="search" placeholder="Search">
@@ -259,7 +263,7 @@
                     <div class="col-lg-6 offset-lg-1 valign">
                         <div class="content">
                             <div class="sub-title">
-                                <h6>About Us</h6>
+                                        <h6>About Us </h6>
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -323,7 +327,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 item-box bg-img wow fadeInLeft" data-wow-delay=".3s"
-                        data-background="img/1.jpg">
+                        >
                         <h4 class="custom-font">Best Of <br> Our Features</h4>
                         <a href="about.html" class="btn-curve btn-bord btn-lit mt-40"><span>See All Services</span></a>
                     </div>
@@ -796,7 +800,7 @@
                             <div class="item-box">
                                 <div class="item">
                                     <div class="bimg">
-                                        <div class="img bg-img" data-background="img/blog/4.jpg"></div>
+                                        <div class="img bg-img" ></div>
                                     </div>
                                     <div class="cont valign">
                                         <div class="full-width">
@@ -831,7 +835,7 @@
 
         <!-- ==================== Start call-to-action ==================== -->
 
-        <section class="call-action section-padding bg-img" data-background="img/pattern.png">
+        <section class="call-action section-padding bg-img">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-lg-9">
@@ -946,6 +950,7 @@
 
     <!-- custom scripts -->
     <script src="js/scripts.js"></script>
+
 
 </body>
 
